# ML_journey

./: .gitignore  README.md
C/: README.md
C/chapter_1/: Celsius-Fahrenheit.c  Fahrenheit-Celsius  file_copy  file_copy.c  hello  num_occ  num_occ.c
C/chapter_2/: sum_avg.c  to_lower.c
C/chapter_3/: itob.c
C/chapter_4/: excercise.c
C/chapter_5/: get_int.c
C/chapter_6/: date.c  make_and_find_linkedlist.c
C/chapter_7/: ex2.c
C/first_project/: main.c  test.txt
C/function_testing/: main.c  math_functions.c  math_functions.h  program
Karapathy/: README.md
Karapathy/GPT_from_scratch/: BLT.ipynb  bigram.ipynb  gpt-dev.ipynb  token.ipynb
Karapathy/gpt-2/: play.ipynb  train_gpt2.py
Karapathy/makemore/: 1.ipynb
articles/: README.md
articles and slides/: README.md
articles and slides/Landing-LLM-Engineer-Job/: job.MD
articles and slides/nvidia_optim/: clip_w4a8_modelopt_coco_article.ipynb  medium_draft.md
articles/demystifying-deepseekmaths/: deepseek_fasttext.ipynb  deepseek_fasttext.md
docs/: Done.MD  README.md  now.md  roadmap.md
learning_materials/: README.md
learning_materials/KG/: hf_kg.ipynb
learning_materials/algoverse/: micro_grad_code.ipynb  section-1-evaluations.ipynb  section-2-interpretability.ipynb
learning_materials/aws/: aws_testing.ipynb
learning_materials/aws/answer-matcher-gaming/: .dockerignore  dockerfile  pyproject.toml  rulebook.py
learning_materials/aws/answer-matcher-gaming/data/: run_results_all_1757425862.jsonl  run_results_all_1757617928.jsonl
learning_materials/basketball/: .gitmodules  how-to-finetune-rf-detr-on-detection-dataset.ipynb
learning_materials/chonkie/: first_attempt.ipynb
learning_materials/demaned_forecast_kaggle/: code.ipynb
learning_materials/fine-tune paligemma/: notebook.ipynb
learning_materials/finetune_embedding/: notebook.ipynb
learning_materials/hf/: finetune_paligemma.ipynb
learning_materials/langgraph/: react.ipynb
learning_materials/llm_eval/: logprob_learnings.ipynb  ragas.ipynb
learning_materials/llmops/: 1.ipynb  2.ipynb  3.ipynb  4.ipynb  5.ipynb  mlflow.db.bak.20260409175355  mlflow.db.bak.before_conda_upgrade  pyproject.toml
learning_materials/neofetch/: README.md  main.py
learning_materials/openai_video_process/: process_video.ipynb
learning_materials/quick_codes/: assistant.py  quick_access.ipynb  testing_in_notebooks.ipynb
learning_materials/unsloth/: llama_synthdata_finetune.ipynb
mini-recsys-implicit/: Dockerfile  README.md  pyproject.toml
mini-recsys-implicit/recsys/: data.py  eval.py  model_als.py  service.py  utils.py
mini-recsys-implicit/scripts/: download_movielens.py  evaluate.py  serve.py  train_als.py
mini-recsys-implicit/tests/: test_data.py  test_eval.py
random_code/NM/: code.ipynb  code_algo_eval.ipynb  nlm_quoraQuestions_WeightedWords_Tokenization.ipynb
random_code/algoverse/: section-1-evaluations.ipynb
random_code/crewai/video_analysis/: pyproject.toml
random_code/crewai/video_analysis/src/video_analysis/: crew.py  main.py
random_code/crewai/video_analysis/src/video_analysis/config/: agents.yaml  tasks.yaml
random_code/crewai/video_with_gpt/: pyproject.toml  result.txt
random_code/crewai/video_with_gpt/src/video_with_gpt/: main.py  video_transcription.txt
random_code/news_hub/: app.py
(+124 files in other folders)
