[project]
name = "mini-recsys-implicit"
version = "0.1.0"
description = "A minimal recommender system using implicit feedback"
requires-python = ">=3.8"
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]

dependencies = [
    "numpy>=1.21.0",
    "pandas>=1.3.0",
    "scipy>=1.7.0",
    "implicit>=0.6.0",
    "fastapi>=0.68.0",
    "uvicorn>=0.15.0",
    "requests>=2.26.0",
    "tqdm>=4.62.0",
]

[project.optional-dependencies]
test = [
    "pytest>=6.0",
    "pytest-cov>=2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]