[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "answer-matcher-gaming"
version = "0.1.0"
description = "Letterless generator→answer-matcher harness with gaming variants (surface/ambiguous) on AWS Bedrock."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Kevork Sulahian" }]

dependencies = [
  "boto3>=1.34",
  "pandas>=2.0",
  "tomli; python_version < '3.11'",
  "chromadb>=0.5.5",
  "ruff>=0.5",
  "black>=24.3",
  "mypy>=1.10",
  "pytest>=8.2",
  "pytest-cov>=4.1",
  # Helpful typing stubs (optional):
  "boto3-stubs[bedrock-runtime]>=1.34",
  "pandas-stubs>=2.0",
  "sentence-transformers>=3.0.0",
]

[project.optional-dependencies]
dev = [

  
]

[project.scripts]
bedrock-eval = "bedrock_eval:main"

[tool.setuptools]
py-modules = ["bedrock_eval"]

[tool.ruff]
target-version = "py310"
line-length = 100
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.mypy]
python_version = "3.10"
warn_unused_configs = true
ignore_missing_imports = true
check_untyped_defs = true
no_implicit_optional = true
pretty = true

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
