[project]
name = "video_analysis"
version = "0.1.0"
description = "news using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "crewai[tools]>=0.80.0,<1.0.0",
    "onnxruntime==1.15.0",
    "socksio>=1.0.0",
    "pyarrow==17.0.0",
    "opencv-python",  # Replaces 'cv2'
    "moviepy",
]

[project.scripts]
video_analysis = "video_analysis.main:run"
run_crew = "video_analysis.main:run"
train = "video_analysis.main:train"
replay = "video_analysis.main:replay"
test = "video_analysis.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
