[project]
name = "video_with_gpt"
version = "0.1.0"
description = "video_with_gpt using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "crewai[tools]>=0.76.2,<1.0.0",
]

[project.scripts]
kickoff = "video_with_gpt.main:kickoff"
plot = "video_with_gpt.main:plot"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
